--- a/code/app/src/main/res/layout/activity_login.xml
+++ b/code/app/src/main/res/layout/activity_login.xml
@@ -25,13 +25,14 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="311dp"
-            android:layout_height="172dp"
+            android:layout_width="395dp"
+            android:layout_height="280dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.071"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.173"
+            app:layout_constraintVertical_bias="0.172"
             app:srcCompat="@drawable/logo_login" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,7 +41,6 @@
             android:layout_height="409dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.488"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.872">
@@ -48,7 +48,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardview1"
                 android:layout_width="308dp"
-                android:layout_height="314dp"
+                android:layout_height="307dp"
                 app:cardBackgroundColor="#FAFAFA"
                 app:cardCornerRadius="60dp"
                 app:cardElevation="0dp"
@@ -64,55 +64,75 @@
                 android:id="@+id/login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/my_button_background_selector"
-                android:enabled="false"
+                android:background="@drawable/custom_edittext"
+                android:enabled="true"
                 android:text="@string/action_sign_in"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/cardview1"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.638" />
+                app:layout_constraintVertical_bias="0.772" />
 
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="272dp"
-                android:layout_height="49dp"
-                android:autofillHints="@string/prompt_password"
-                android:backgroundTint="#000000"
-                android:hint="@string/prompt_password"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:selectAllOnFocus="true"
-                android:textColor="#000000"
-                android:textColorHighlight="#888888"
-                android:textColorHint="#000000"
-                android:textColorLink="#191919"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/username"
-                android:layout_width="273dp"
-                android:layout_height="58dp"
-                android:autofillHints="@string/prompt_email"
-                android:backgroundTint="#000000"
-                android:foregroundTint="#0000"
-                android:hint="@string/prompt_email"
-                android:inputType="textEmailAddress"
-                android:selectAllOnFocus="true"
-                android:textColor="#000000"
-                android:textColorHighlight="#777777"
-                android:textColorHint="#000000"
-                android:textColorLink="#404040"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView3"
+                android:layout_width="295dp"
+                android:layout_height="55dp"
+                android:layout_marginStart="10dp"
+                app:cardBackgroundColor="#BCBABA"
+                app:cardCornerRadius="60dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.37" />
+                app:layout_constraintVertical_bias="0.300">
+
+                <EditText
+                    android:id="@+id/username"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:autofillHints="@string/prompt_email"
+                    android:background="@drawable/custom_edittext"
+                    android:hint="@string/prompt_email"
+                    android:inputType="textEmailAddress"
+                    android:selectAllOnFocus="true"
+                    android:textColor="#000000"
+                    android:textColorHighlight="#777777"
+                    android:textColorHint="#000000"
+                    android:textColorLink="#404040" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView"
+                android:layout_width="295dp"
+                android:layout_height="55dp"
+                android:layout_marginStart="10dp"
+                app:cardBackgroundColor="#BCBABA"
+                app:cardCornerRadius="60dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:autofillHints="@string/prompt_password"
+                    android:background="@drawable/custom_edittext"
+                    android:hint="@string/prompt_password"
+                    android:imeActionLabel="@string/action_sign_in_short"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPassword"
+                    android:selectAllOnFocus="true"
+                    android:textColor="#000000"
+                    android:textColorHighlight="#888888"
+                    android:textColorHint="#000000"
+                    android:textColorLink="#191919" />
+            </androidx.cardview.widget.CardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
