--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="colorPrimary">#5271FF</color>
     <color name="colorPrimaryDark">#5271FF</color>
     <color name="colorAccent">#5271FF</color>
+    <color name="light_grey">#D3D3D3</color>
+    <color name="dark_grey">#AEAEAE</color>
+
 </resources>
