--- a/code/app/src/main/res/values/styles.xml
+++ b/code/app/src/main/res/values/styles.xml
@@ -13,6 +13,9 @@
         <item name="android:textStyle">bold</item>     <!-- Text style (bold) -->
         <item name="android:textColor">@color/black</item> <!-- Text color (black) -->
     </style>
-
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/yellow</item>
+    </style>
 </resources>
 
