--- a/code/app/src/main/res/layout/activity_report_form.xml
+++ b/code/app/src/main/res/layout/activity_report_form.xml
@@ -126,8 +126,8 @@
 
         <EditText
             android:id="@+id/editTextTextMultiLine2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:ems="15"
             android:gravity="start|top"
